--- a/style.css
+++ b/style.css
@@ -17,9 +17,11 @@
 
 :root{
   --light: #eae6de;
+  --inner-box: #C0C1B9;
   --dark: #9fa287;
   --light-text: #121212;
   --dark-text: #CCCCCC;
+  
 
   --font-sidenav:'Ubuntu', sans-serif;
   --font-body: 'Metropolis', sans-serif;
@@ -80,7 +82,7 @@ section {
 
 .outer-container-sec3 {
   width: 95%;
-  height: 90%;
+  height: 95%;
   display: flex;
   flex-direction: column;
   overflow-x: hidden;
@@ -98,7 +100,7 @@ section {
 /* inner-containers */
 
 .inner-container-sec1 {
-  background: rgba(0, 0, 0, .15);
+  background: var(--inner-box);
   border-radius: 10px;
   min-width: 100px;
   margin: 5px 5px 40px 4px;
@@ -124,15 +126,10 @@ section {
   position: relative; 
 }
 
-
 /* For the quote text */
 .inner-container-sec1#quote h1 {
   font-size: 4em; /* Responsive font size */
   margin: 0 0 10px 0; /* Add some space below the quote */
-}
-
-.text-container{
-  min-width: 400px;
 }
 
 /* For the author text */
@@ -142,6 +139,44 @@ section {
   font-size: 1em; /* Responsive font size */
 }
 
+.inner-container-sec2 {
+  border-radius: 10px;
+  padding: 0 70px 0 70px;
+  min-width: 100px;
+  height: 20%;
+  width: 50%;
+  overflow:hidden;
+  color: var(--light-text);
+}
+
+.inner-container-sec3 {
+  border-radius: 10px;
+  align-content: center;
+  min-width: 100px;
+  height: 10%;
+  margin: 5px 5px 3px 3px;
+  overflow:hidden;
+  color: var(--light-text);
+}
+
+.inner-container-sec3-grid {
+  display: grid;
+  background: var(--inner-box);
+  min-width: 300px;
+  border-radius: 10px;
+  height: 95%;
+  grid-template-columns: repeat(2, 1fr); /* 5 columns */
+  grid-template-rows: repeat(2, 1fr); /* 2 rows */
+  gap: 5px; /* space between grid items */
+  overflow:hidden;
+  color: var(--light-text);
+  justify-content: center;
+}
+
+
+.text-container{
+  min-width: 400px;
+}
 
 .welcome-padding {
   padding: 40px 100px 0 100px;
@@ -231,18 +266,6 @@ section {
 
 /* STYLE FOR SECTION 2 */
 
-
-.inner-container-sec2 {
-  
-  border-radius: 10px;
-  padding: 0 70px 0 70px;
-  min-width: 100px;
-  height: 20%;
-  width: 50%;
-  overflow:hidden;
-  color: var(--light-text);
-}
-
 @media (max-width: 1100px) {
   .inner-container-sec2 {
     font-size: 1em;
@@ -286,66 +309,45 @@ section {
 
 /* STYLE FOR SECTION 3 */
 
-.inner-container-sec3 {
-  border-radius: 10px;
-  min-width: 100px;
-  height: 10%;
-  margin: 5px 5px 3px 3px;
-  overflow:hidden;
-  color: var(--light-text);
-}
+@media (max-width: 1000px) {
 
-.inner-container-sec3-grid {
-  background: rgba(0, 0, 0, 0.15);
-  min-width: 300px;
-  border-radius: 10px;
-  height: 75%;
-  margin: 20px;
-  padding: 20px;
-  overflow:hidden;
-  color: var(--light-text);
-}
-
-.grid-container {
-  display: grid;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  grid-template-columns: repeat(2, 1fr); /* 5 columns */
-  grid-template-rows: repeat(5, 1fr); /* 2 rows */
-  gap: 5px; /* space between grid items */
-  overflow-x: hidden;
-}
-
-@media (max-width: 700px) {
-
-  
-  .grid-container {
+  .inner-container-sec3-grid {
       display: grid;
-      padding-top: 70px;
-      padding-bottom: 50px;
       grid-template-columns: repeat(1, 1fr);
-      gap: 5px; /* space between grid items */
+      border: 1px red solid;
+      overflow-y:scroll;
+      gap: 10px; /* space between grid items */
   }
+
+  .video-item {
+    min-width: 400px;
+    padding-top: 60px;
+    width: 70%;
+    margin-top: 35px;
+    margin-bottom: 35px;
+    scale: 1.25;
+  }
+ 
 
 }
 
 .video-item {
-    margin-top: 50px;
-    padding-bottom: 60px;
+    justify-self: center;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     opacity: 100%;
-    min-height: 250px;
-}
+  }
 
 .video-thumbnail {
+    aspect-ratio: 16 / 9;
     height: 188px;
     width: 366px;
 }
 
 .video-title {
-    margin: 10px 0;
+  padding-top: 10px;
     text-align: center;
 }
 
@@ -400,7 +402,7 @@ label {
 
 
 .inner-container-sec5-form {
-  background: rgba(0, 0, 0, .15);
+  background: --inner-box;
   border-radius: 10px;
   min-width: 100px;
   width: 400px;
